--- a/package.json
+++ b/package.json
@@ -55,5 +55,6 @@
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "hompage": "https://magenta-choux-7986e5.netlify.app/"
 }
