--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   },
-  "hompage": "https://magenta-choux-7986e5.netlify.app/"
+  "hompage": "https://prismatic-biscotti-52641b.netlify.app/"
 }
